	* added feature to set a separate global rate limit for local peers
	* added preset settings for low memory environments and seed machines
	  min_memory_usage() and high_performance_seeder()
	* optimized overall memory usage for DHT nodes and requests, peer
	  entries and disk buffers
	* change in API for block_info in partial_piece_info, instead of
	  accessing 'peer', call 'peer()'
	* added support for fully automatic unchoker (no need to specify
	  number of upload slots). This is on by default
	* added support for changing socket buffer sizes through
	  session_settings
	* added support for merkle hash tree torrents (.merkle.torrent)
	* added 'seed mode', which assumes that all files are complete
	  and checks hashes lazily, as blocks are requested
	* added new extension for file attributes (executable and hidden)
	* added support for unbuffered I/O for aligned files
	* added workaround for sparse file issue on Windows Vista
	* added new lt_trackers extension to exchange trackers between
	  peers
	* added support for BEP 17 http seeds
	* added read_piece() to read pieces from torrent storage
	* added option for udp tracker preference
	* added super seeding
	* added add_piece() function to inject data from external sources
	* add_tracker() function added to torrent_handle
	* if there is no working tracker, current_tracker is the
	  tracker that is currently being tried
	* torrents that are checking can now be paused, which will
	  pause the checking
	* introduced another torrent state, checking_resume_data, which
	  the torrent is in when it's first added, and is comparing
	  the files on disk with the resume data
	* DHT bandwidth usage optimizations
	* rate limited DHT send socket
	* tracker connections are now also subject to IP filtering
	* improved optimistic unchoke logic
	* added monitoring of the DHT lookups
	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter